--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
   <h1>Tabela de classificação</h1>
   <div>
-  <input type="text" id="nomeDoJogador" placeholder="Nome do Jogador">
-  <button type="submit" class="botaoPrincipal" onclick="adicionarJogador()">Adicionar</button>
+    <input type="text" id="nomeDoJogador" placeholder="Nome do Jogador">
+    <button type="submit" class="botaoPrincipal" onclick="adicionarJogador()">Adicionar</button>
   </div>
   <table style="width:100%">
     <thead>
@@ -39,6 +39,7 @@
   </table>
   <div>
    <button type="submit" class="zerar" onclick="zerarTabela()">ZERAR TABELA</button> 
+  </div>  
 </body>
 
 </html>
